--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
-    "react-router": "^4.0.0-2"
+    "react-redux": "^5.0.2",
+    "react-router": "^4.0.0-2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.2"
   },
   "scripts": {
     "webpackWatch": "webpack -w",
