Squashed commit of the following:
commit cf98aa638a05a78818a4ba3d5284bdc0f5b10f11
Author: Puxuan He <puxuanhe@gmail.com>
Date:   Sat Feb 4 23:31:14 2017 -0600

    add nav links

commit d53a98a4ec6e2ee89590ace551410630aba321c7
Author: Puxuan He <phe@expedia.com>
Date:   Sat Feb 4 20:37:41 2017 -0600

    add firebase api.

--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "webpack": "^1.14.0",
     "webpack-dev-server": "1.14.1"
   },
+  "standard": {
+    "parser": "babel-eslint"
+  },
   "dependencies": {
+    "firebase": "^3.6.8",
+    "promise-polyfill": "^6.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-mdl": "^1.9.0",
     "react-redux": "^5.0.2",
-    "react-router": "^4.0.0-2",
+    "react-router": "4.0.0-2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0",
-    "whatwg-fetch": "^2.0.2"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "webpackWatch": "webpack -w",
