reformat the structure

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -22,7 +22,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "../index.html",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#FFFFFF"
